[project]
name = "lockbox-number-generator"
version = "0.1.0"
description = "Generates unique 4-digit numbers"
dependencies = ["typer", "rich"]
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
# List of paths to include (by default, include all files)
include = ["*.py","tests"]
# Specify the rules you want enabled
[tool.ruff.lint]
# Specify the rules you want enabled
select = ["F"]

[project.optional-dependencies]
dev = ["pytest"]